--- a/ec2-product.yml
+++ b/ec2-product.yml
@@ -1,25 +1,32 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Resources:
-  MyServiceCatalogProduct:
-    Type: 'AWS::ServiceCatalog::CloudFormationProduct'
-    Properties:
-      Name: MyProduct
-      Description: My Service Catalog Product
-      Owner: MyCompany
-      ProvisioningArtifactParameters:
-        - Name: v1.0.0
-          Description: Version 1.0.0
-          Info:
-            LoadTemplateFromURL: 'https://github.com/your-organization/your-repo/raw/main/product-template.yaml'
-      Distributor: MyCompany
-      SupportDescription: For assistance, contact support@mycompany.com
-      SupportEmail: support@mycompany.com
-      SupportUrl: 'https://www.mycompany.com/support'
-      ProvisioningArtifactPreferences:
-        StackSetAccounts:
-          - 'YOUR_ACCOUNT_ID'
-        StackSetRegions:
-          - 'us-east-1'
-      Tags:
-        - Key: CostCenter
-          Value: '12345'
+{
+  "AWSTemplateFormatVersion": "2010-09-09",
+  "Resources": {
+    "MyServiceCatalogProduct": {
+      "Type": "AWS::ServiceCatalog::CloudFormationProduct",
+      "Properties": {
+        "Name": "EC2 Product",
+        "Description": "My Service Catalog Product",
+        "Owner": "MyCompany",
+        "ProvisioningArtifactParameters": [
+          {
+            "Name": "v1.0.0",
+            "Description": "Version 1.0.0",
+            "Info": {
+              "LoadTemplateFromURL": "https://github.com/BenCamareno/service-catalog/blob/main/product-template.yaml"
+            }
+          }
+        ],
+        "Distributor": "MyCompany",
+        "SupportDescription": "For assistance, contact support@mycompany.com",
+        "SupportEmail": "support@mycompany.com",
+        "SupportUrl": "https://www.mycompany.com/support",
+        "Tags": [
+          {
+            "Key": "CostCenter",
+            "Value": "12345"
+          }
+        ]
+      }
+    }
+  }
+}
