--- a/ec2-product.yml
+++ b/ec2-product.yml
@@ -4,7 +4,7 @@
     "MyServiceCatalogProduct": {
       "Type": "AWS::ServiceCatalog::CloudFormationProduct",
       "Properties": {
-        "Name": "EC2 Product",
+        "Name": "MyProduct",
         "Description": "My Service Catalog Product",
         "Owner": "MyCompany",
         "ProvisioningArtifactParameters": [
@@ -12,7 +12,10 @@
             "Name": "v1.0.0",
             "Description": "Version 1.0.0",
             "Info": {
-              "LoadTemplateFromURL": "https://github.com/BenCamareno/service-catalog/blob/main/product-template.yaml"
+              "LoadTemplateFromURL": "https://github.com/BenCamareno/service-catalog/blob/main/product-template.yaml",
+              "UI": {
+                "TemplateURL": "https://github.com/BenCamareno/service-catalog/blob/main/custom-ui.html"
+              }
             }
           }
         ],
