--- a/product-template.yaml
+++ b/product-template.yaml
@@ -1,13 +1,10 @@
 AWSTemplateFormatVersion: '2010-09-09'
+
 Parameters:
   InstanceType:
     Type: String
     Description: EC2 instance type
     Default: t2.micro
-  CustomTags:
-    Type: CommaDelimitedList
-    Description: Custom tags to apply to the EC2 instance
-    Default: ''
 
 Resources:
   EC2Instance:
@@ -20,13 +17,13 @@ Resources:
           Value: MyEC2Instance
         - Key: Environment
           Value: Production
-        - Key: ${CustomTags[0]}
-          Value: ${CustomTags[1]}
-        - Key: ${CustomTags[2]}
-          Value: ${CustomTags[3]}
-        - Key: ${CustomTags[4]}
-          Value: ${CustomTags[5]}
-        - Key: ${CustomTags[6]}
-          Value: ${CustomTags[7]}
-        - Key: ${CustomTags[8]}
-          Value: ${CustomTags[9]}
+        - !If
+          - Condition: ShouldAddCustomTags
+            Fn::Split:
+              - ','
+              - !Ref CustomTags
+          - !Ref CustomTags
+          - !Ref "AWS::NoValue"
+
+Conditions:
+  ShouldAddCustomTags: !Not [!Equals [!Ref CustomTags, ""]]
